# nexora

./: .flake8  .pre-commit-config.yaml  CMD.md  Dockerfile  Makefile  QUICKSTART.md  README.md  TODO.txt  docker-compose.yaml  environment.yaml  jupyter_notebook_config.py  requirements.txt  setup.cfg  setup.py
docs/: app.py  docs.sh  log.txt
docs/source/: conf.py  index.rst
examples/: binary-classification-lgbm.ipynb  binary-classification-xgb.ipynb  multi-class-classification-lgbm.ipynb  multi-class-classification-xgb.ipynb  multi-column-regression-lgbm.ipynb  multi-column-regression-xgb.ipynb  multi-label-classification-lgbm.ipynb  multi-label-classification-xgb.ipynb  single-column-regression-lgbm.ipynb  single-column-regression-xgb.ipynb
examples/data_samples/: binary-classification-pred.csv
src/: __init__.py  pre_commit_test.py
src/nexora/: logger.py  logger2.py  parser.py
tests/test1/: conftest.py  test_dummy.py
tests/test2/: conftest.py  test_dummy.py
tests/test3/: test_dummy.py  test_runner.py
