[metadata]
name = nexora
version = attr: nexora.__version__
author = Ali Cabukel
description = This is an ML project in order to automate ML processes
long_description = The objective of this project to implement ML lifecycle more automated way
url = https://github.com/overenginar/nexora
keywords = ml, xgboost, optuna, setuptools

[options]
python_requires = >=3.7, <4
install_requires =
    pandas

[options.extras_require]
test =
    pytest
    coverage

[options.package_data]
sample =
    example_data.csv
